--- a/minggu4/lat-form-ppdb.html
+++ b/minggu4/lat-form-ppdb.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <form action="index.php" method="post">
+    <form action="form.php" method="post">
         <h1>
             <center>Biodata Pendaftaran Mahasiswa Baru </center>
         </h1>
@@ -20,13 +20,13 @@
         <table width="600" cellpadding="10" <div style='margin-left: 80px;' />
 
         <tr>
-            <td>Nama Calon Siswa</td>
+            <td>Nama Siswa</td>
             <td>: <input type="text" name="nama_siswa" </td>
         </tr>
         <tr>
             <td>Jenis Kelamin</td>
-            <td>: <input type="radio" name="jenis_kelamin" value="laki laki" />Laki laki
-                <input type="radio" name="jenis_kelamin" valuue="perempuan" />Perempuan
+            <td>: <input type="radio" name="jk" value="laki laki" />Laki laki
+                <input type="radio" name="jk" valuue="perempuan" />Perempuan
             </td>
         </tr>
         <tr>
@@ -39,7 +39,7 @@
         </tr>
         <tr>
             <td>No Telepon</td>
-            <td>: <input type="text" name="no telp" /> </td>
+            <td>: <input type="text" name="no_telp" /> </td>
         </tr>
 
         <tr>
@@ -59,7 +59,7 @@
         </tr>
         <tr>
             <td>Foto</td>
-            <td>: <input type="file" name="choose file" /> </td>
+            <td>: <input type="file" name="choose_file" /> </td>
         </tr>
         </table>
 
@@ -76,7 +76,7 @@
             </tr>
             <tr>
                 <td>Agama</td>
-                <td>: <select name="agama">
+                <td>: <select name="agama_1">
                         <option value="-"></option>
                         <option value="kristen">Kristen</option>
                         <option value="islan">Islam</option>
@@ -87,11 +87,11 @@
             </tr>
             <tr>
                 <td>Pekerjaan</td>
-                <td>: <input type="text" name="pekerjaan"> </td>
+                <td>: <input type="text" name="pekerjaan_1"> </td>
             </tr>
             <tr>
                 <td>Alamat</td>
-                <td>: <textarea></textarea></td>
+                <td>: <textarea name="alamat_1"></textarea></td>
             </tr>
             </table>
 
@@ -108,7 +108,7 @@
                 </tr>
                 <tr>
                     <td>Agama</td>
-                    <td>: <select name="agama">
+                    <td>: <select name="agama_2">
                             <option value="-"></option>
                             <option value="kristen">Kristen</option>
                             <option value="islan">Islam</option>
@@ -119,11 +119,12 @@
                 </tr>
                 <tr>
                     <td>Pekerjaan</td>
-                    <td>: <input type="text" name="pekerjaan"> </td>
+                    <td>: <input type="text" name="pekerjaan_2"> </td>
                 </tr>
                 <tr>
                     <td>Alamat</td>
-                    <td>: <textarea></textarea></td>
+                    <td>: <textarea name="alamat_2"></textarea></td>
+                    
                     </table>
                     <hr>
 
